# haskellbook

./: .gitignore  README.md  Reader.hs  applicative.hs  applyTimes.hs  arith2.hs  asPatterns.hs  binaryTree.hs  bind.hs  books.hs  capitalize.hs  carTypes.hs  casePractice.hs  cipher.hs  constructing.hs  databaseProcessing.hs  datatypeDeclaration.hs  deconstructing.hs  determineTheType.hs  dogYears.hs  eitherLib.hs  eitherMonad.hs  enumFromTo.hs  eqInstances.hs  exponentialTypes.hs  factorial.hs  filterDog.hs  foldable.hs  goatTypes.hs  grabbag.hs  grading.hs  haskellbook.cabal  heavyLifting.hs  huttonsRazor.hs  identityInstance.hs  itsOnlyNatural.hs  learn.hs  letsWriteCode.hs  matchTheTypes.hs  maybeLib.hs  (+30 more)
projects/: madlibs.hs
projects/CheckApplicative/: CheckApplicative.cabal  Instances.hs  Specialise.hs  Traversable.hs
projects/CheckApplicative/src/: Apl1.hs
projects/addition/: Addition.cabal  Addition.hs
projects/checkMonoid/: CheckMonoid.cabal
projects/hangman/: Fractions.hs  Ini.hs  IntegerParser.hs  LogFileParser.hs  Marshalling.hs  PhoneNumberParser.hs  SemVer.hs  fizzBuzz.hs  hangman.cabal  throwDown.hs
projects/hangman/src/: Main.hs
projects/hangman/tests/: tests.hs
projects/hello/: hello.cabal
projects/hello/exe/: Main.hs
projects/hello/src/: Hello.hs
projects/instancesOfFunc/: InstancesOfFunc.cabal  InstancesOfFunc.hs
projects/morse/: morse.cabal
projects/morse/src/: Main.hs
projects/numbers/: numbers.cabal
projects/numbers/app/: Main.hs
projects/numbers/src/: WordNumber.hs
projects/numbers/test/: WordNumberTest.hs
projects/orphan-instance/: Listy.hi  Listy.hs  ListyInstances.hi
projects/shawty-prime/app/: Main.hs
src/: ApplicativeEx.hs  ApplyTimes.hs  Arith3Broken.hs  Arith4.hs  AsPatterns.hs  BadMonoid.hs  BinaryTree.hs  Bind.hs  Books.hs  Capitalize.hs  CarTypes.hs  CasePractice.hs  CheckMonoid.hs  Constructing.hs  CurryEx.hs  DatabaseProcessing.hs  DatatypeDeclaration.hs  Deconstructing.hs  DogYears.hs  EitherLib.hs  EnumFromTo.hs  EqInstances.hs  ExponentialTypes.hs  FilterDog.hs  FizzBuzz.hs  FunctionsAsTypes.hs  GoatTypes.hs  GrabBag.hs  Grading.hs  Hangman.hs  HangmanMain.hs  HangmanTests.hs  HeavyLifting.hs  HuttonsRazor.hs  IdentityInstance.hs  IntegerParser.hs  ItsOnlyNatural.hs  Jammin.hs  LearnParsers.hs  LetsWriteCode.hs  (+45 more)
