name:           CheckMonoid
version:        0.1.0.0
build-type:     simple
cabal-version:  >=1.10

library
    hs-source-dirs:     .
    exposed-modules:    CheckMonoid
    build-depends:      base
                      , QuickCheck
                      , semigroups
    default-language:   Haskell2010
