name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
-- homepage:            
license:             BSD3
license-file:        LICENSE
author:              Tom Smalley
maintainer:          your.address@example.com
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , transformers
                     , dlist
                     , random
                     , hangman
                     , split
                     , trifecta
                     , raw-strings-qq
                     , bytestring
                     , text
                     , hspec
                     , aeson
  default-language:    Haskell2010

library
    exposed-modules:    Hangman
    build-depends:      base
                      , containers
                      , random
                      , split
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite tests
    hs-source-dirs:     tests
    type:               exitcode-stdio-1.0
    main-is:            tests.hs
    build-depends:      base
                      , containers
                      , hspec
                      , hangman

